--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard </title>
-    <link rel="stylesheet" href=""
+    <link rel="stylesheet" href="./assets/style.css"
 </head>
 <body>
-    <h1>Weather Dashboard</h1>
+    <header>
+        <h1>Weather Dashboard</h1>
+    </header>
+    <div class="search">
+        <h2>Search for a city:</h2>
+    </div>
+    
 </body>
 </html>
